remove bloated error response
