# docs/swagger.json
@@ -72,7 +72,7 @@
                     "default": {
                         "description": "400 \u0026 500 status, error field can be string or object",
                         "schema": {
-                            "$ref": "#/definitions/httputil.ErrorResponse"
+                            "$ref": "#/definitions/httputil.RestError"
                         }
                     }
                 }
@@ -112,7 +112,7 @@
                     "default": {
                         "description": "400 \u0026 500 status, error field can be string or object",
                         "schema": {
-                            "$ref": "#/definitions/httputil.ErrorResponse"
+                            "$ref": "#/definitions/httputil.RestError"
                         }
                     }
                 }
@@ -172,7 +172,7 @@
                     "default": {
                         "description": "400 \u0026 500 status, error field can be string or object",
                         "schema": {
-                            "$ref": "#/definitions/httputil.ErrorResponse"
+                            "$ref": "#/definitions/httputil.RestError"
                         }
                     }
                 }
@@ -235,7 +235,7 @@
                     "default": {
                         "description": "400 \u0026 500 status, error field can be string or object",
                         "schema": {
-                            "$ref": "#/definitions/httputil.ErrorResponse"
+                            "$ref": "#/definitions/httputil.RestError"
                         }
                     }
                 }
@@ -276,7 +276,7 @@
                     "default": {
                         "description": "400 \u0026 500 status, error field can be string or object",
                         "schema": {
-                            "$ref": "#/definitions/httputil.ErrorResponse"
+                            "$ref": "#/definitions/httputil.RestError"
                         }
                     }
                 }
@@ -314,7 +314,7 @@
                     "default": {
                         "description": "400 \u0026 500 status, error field can be string or object",
                         "schema": {
-                            "$ref": "#/definitions/httputil.ErrorResponse"
+                            "$ref": "#/definitions/httputil.RestError"
                         }
                     }
                 }
@@ -361,7 +361,7 @@
                     "default": {
                         "description": "400 \u0026 500 status, error field can be string or object",
                         "schema": {
-                            "$ref": "#/definitions/httputil.ErrorResponse"
+                            "$ref": "#/definitions/httputil.RestError"
                         }
                     }
                 }
@@ -384,18 +384,6 @@
                 }
             }
         },
-        "httputil.ErrorResponse": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer"
-                },
-                "error": {},
-                "status": {
-                    "type": "string"
-                }
-            }
-        },
         "httputil.Response": {
             "type": "object",
             "properties": {
@@ -403,6 +391,18 @@
                     "type": "integer"
                 },
                 "data": {},
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "httputil.RestError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "error": {},
                 "status": {
                     "type": "string"
                 }
